# cofetch_ros2

./: README.md
cofetch_bringup/: CMakeLists.txt  package.xml
cofetch_bringup/launch/: multi_robot_bringup.launch.py  robot_bringup.launch.py
cofetch_config/: CMakeLists.txt  package.xml
cofetch_config/config/: exploration_config.yaml  navigation_config.yaml  perception_config.yaml  robot_config.yaml  scheduler_config.yaml  system_config.yaml
cofetch_config/launch/: config.launch.py
cofetch_config/scripts/: config_manager.py
cofetch_deps/: CMakeLists.txt  dependencies.yaml  package.xml
cofetch_deps/scripts/: check_dependencies.py  install_dependencies.sh
cofetch_description/: CMakeLists.txt  package.xml
cofetch_description/urdf/: cofetch_robot.urdf.xacro
cofetch_description/worlds/: indoor.world
cofetch_docs/: CMakeLists.txt  package.xml
cofetch_docs/scripts/: generate_docs.py
cofetch_exploration/: CMakeLists.txt  package.xml
cofetch_exploration/launch/: exploration.launch.py
cofetch_exploration/scripts/: exploration_collaboration_node.py  exploration_coordinator_node.py  frontier_detection_node.py
cofetch_gazebo/: CMakeLists.txt  package.xml
cofetch_gazebo/config/: sensor_config.yaml
cofetch_gazebo/launch/: gazebo.launch.py  spawn_robots.launch.py
cofetch_gazebo/scripts/: sensor_simulator.py
cofetch_manipulation/: CMakeLists.txt  package.xml
cofetch_manipulation/launch/: manipulation.launch.py
cofetch_manipulation/scripts/: arm_control_node.py  gripper_control_node.py  manipulation_executor_node.py
cofetch_monitoring/: CMakeLists.txt  package.xml
cofetch_monitoring/launch/: monitoring.launch.py
cofetch_monitoring/scripts/: system_monitor_node.py
cofetch_msgs/: CMakeLists.txt  package.xml
cofetch_msgs/action/: Explore.action  NavigateTo.action  PickObject.action  PlaceObject.action
cofetch_msgs/msg/: FrontierInfo.msg  LogMsg.msg  NavStatus.msg  ObjectInfo.msg  ObjectList.msg  PathInfo.msg  RobotStatus.msg  SystemStatus.msg  TaskInfo.msg  TaskList.msg
cofetch_msgs/srv/: GetConfig.srv  GetRobotStatus.srv  GetSystemStatus.srv  GetTaskStatus.srv  SetConfig.srv
cofetch_navigation/: CMakeLists.txt  package.xml
cofetch_navigation/launch/: navigation.launch.py
cofetch_navigation/scripts/: obstacle_avoidance_node.py  pure_pursuit_controller.py
cofetch_perception/: CMakeLists.txt  package.xml
cofetch_perception/launch/: perception.launch.py
cofetch_perception/scripts/: object_detection_node.py  object_tracking_node.py
cofetch_performance/: CMakeLists.txt  package.xml
cofetch_performance/launch/: performance.launch.py
cofetch_performance/scripts/: performance_monitor_node.py  topic_bandwidth_analyzer.py
cofetch_scheduler/: CMakeLists.txt  package.xml
cofetch_scheduler/launch/: scheduler.launch.py
cofetch_scheduler/scripts/: task_assignment_node.py  task_execution_monitor_node.py  task_generation_node.py
cofetch_testing/: CMakeLists.txt  package.xml
cofetch_testing/scripts/: run_tests.py  test_messages.py
cofetch_ui/: CMakeLists.txt  package.xml
cofetch_ui/launch/: ui.launch.py
cofetch_ui/scripts/: status_display_node.py
