<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cofetch_gazebo</name>
  <version>0.0.0</version>
  <description>Cofetch Gazebo simulation environment</description>
  <maintainer email="wangyu@example.com">Wang Yu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>cofetch_description</exec_depend>
  <exec_depend>turtlebot4_description</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>