<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cofetch_manipulation</name>
  <version>0.0.0</version>
  <description>Cofetch manipulation module for arm and gripper control</description>
  <maintainer email="wangyu@example.com">Wang Yu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cofetch_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>