<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cofetch_perception</name>
  <version>0.0.0</version>
  <description>Cofetch perception module for visual object detection and tracking</description>
  <maintainer email="wangyu@example.com">Wang Yu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rclpy</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cofetch_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>